<resources>
    <string name="app_name">BitCoin Pools</string>
    <string name="exit">Exit</string>
    <string name="pools">Pools</string>
    <string name="blocks">Blocks</string>
    <string name="latest_24h_pools_information">Latest pools information</string>
    <string name="settings">Settings</string>
    <string name="tos">License</string>
    <string name="update">Update content</string>
    <string name="close">Close app</string>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="cDays">Days to show latest pools information: </string>
    <string name="numDays">1</string>
    <string name="error">An error occurred. Please, check permissions</string>
    <string name="updated">Updated</string>
    <string name="ftos">
Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    <string name="license">More info about MIT license: https://goo.gl/tiitU5</string>
    <string name="fullcode">View full project and other licenses here: https://goo.gl/LbLmBq</string>
    <string name="basedCode">Code based on:</string>
    <string name="daysDescrip">When looking for information about pools and mined blocks, it can be about the latest 24 hours (by default) or about more days</string>
    <string name="settingsTitle">Settings</string>
    <string name="licenseTitle">License</string>
    <string name="prefUpdated">Preferences updated correctly</string>
    <string name="BTCP">Current BTC price: $</string>
    <string name="porcent">% of mined blocks</string>
</resources>
