<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MIT License Copyright © 2017 - Javinator9889 "
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ftos"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/fullcode"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basedCode"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="BTC API: https://blockchain.info/api"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="Round float: https://stackoverflow.com/questions/8911356/whats-the-best-practice-to-round-a-float-to-2-decimals"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="Spinner (1): https://stackoverflow.com/questions/11072576/set-selected-item-of-spinner-programmatically"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="Spinner (2): https://developer.android.com/guide/topics/ui/controls/spinner.html?hl=es-419 "
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="NET Tools: https://stackoverflow.com/questions/1485708/how-do-i-do-a-http-get-in-java"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="NET Tools (2): https://stackoverflow.com/questions/1359689/how-to-send-http-request-in-java"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="Chart Drawer: https://github.com/PhilJay/MPAndroidChart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:autoLink="web"
                    android:text="@string/license" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>