<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">

    <TableLayout
        android:id="@+id/poolstable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="76dp">

            <TextView
                android:id="@+id/pooltext"
                android:layout_width="184dp"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:text="@string/pools"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/blocks"
                android:layout_width="183dp"
                android:layout_height="35dp"
                android:text="@string/blocks"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        </TableRow>

    </TableLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menu_fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_labels_margin"
        android:visibility="visible"
        app:fab_addButtonColorNormal="?attr/colorPrimary"
        app:fab_addButtonSize="normal"
        app:fab_labelStyle="@style/etq"
        app:fab_labelsPosition="left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_icon="@drawable/ic_settings_black_48dp"
            app:fab_size="mini"
            app:fab_title="Settings" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_icon="@drawable/ic_security"
            app:fab_size="mini"
            app:fab_title="License" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_icon="@drawable/ic_sync"
            app:fab_size="mini"
            app:fab_title="Update content" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?attr/colorAccent"
            app:fab_icon="@drawable/ic_close"
            app:fab_size="mini"
            app:fab_title="Close app" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="587dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="302dp">

            <TextView
                android:id="@+id/latest24"
                style="@android:style/Widget.DeviceDefault.Light.TextView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/latest_24h_pools_information"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chart" />

            <ScrollView
                android:id="@+id/scrollView3"
                android:layout_width="0dp"
                android:layout_height="127dp"
                android:layout_marginTop="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latest24">

                <GridLayout
                    android:id="@+id/pooltable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2">

                    <TextView
                        android:id="@+id/pooltext2"
                        android:layout_width="184dp"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:text="@string/pools"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/blocks2"
                        android:layout_width="183dp"
                        android:layout_height="35dp"
                        android:text="@string/blocks"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                </GridLayout>
            </ScrollView>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="390dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.github.mikephil.charting.charts.PieChart>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>